# zk-groth16-engine

./: .gitignore  LICENSE  README.md
backend/bn254_engine/: Cargo.toml  pyproject.toml
backend/bn254_engine/src/: lib.rs
backend/verification/: deserializer.py  groth16_verifier.py
core_cpp/: Makefile
core_cpp/src/: proof_assembly.cpp  prover_engine.cpp  vector_prover.cpp  verification_harness.cpp  witness_engine.cpp
core_cpp/test/: msm_ntt_harness.mjs  proof_assembly_harness.mjs  pthread_harness.mjs  r1cs_witness_harness.mjs
frontend/hooks/: useZkConvergence.ts  useZkProver.ts
frontend/lib/: ZkProofExporter.ts
frontend/wasm/: prover_engine.js  prover_engine.wasm
frontend/workers/: zkOrchestrator.worker.ts
tests/: extreme_stress_test.py  stress_test.py
