[package]
name = "bn254_engine"
version = "0.1.0"
edition = "2021"
description = "ZK Engine — BN254 Groth16 verifier (PyO3 native extension)"

[lib]
name = "bn254_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-snark = "0.5"
num-bigint = "0.4"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
